# LifeOS

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  _alembic_gen.db-journal  _dev.db-journal  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 030329a91028_create_plan_tasks.py  06c5868d6a17_create_plans_milestones_planner_runs.py  78d22a4bd957_planner_productization.py  a1b2c3d4e5f6_create_memories.py  da1eec629c65_create_users_goals_workspaces.py  e1a2b3c4d5f6_create_plan_replan_events.py  f7a8b9c0d1e2_create_habits.py
backend/app/: main.py
backend/app/agents/: __init__.py  approval_agent.py  execution_agent.py  memory_agent.py  planner_agent.py  research_agent.py
backend/app/core/: config.py  deps.py
backend/app/database/: session.py
backend/app/execution/: __init__.py
backend/app/integrations/: __init__.py
backend/app/memory/: __init__.py
backend/app/models/: __init__.py  goal.py  habit.py  plan.py  plan_replan_event.py  plan_task.py  planner_run.py  user.py  workspace.py
backend/app/planner/: __init__.py  parser.py  preference_detection.py  prompts.py
backend/app/research/: __init__.py
backend/app/schemas/: __init__.py  goal.py  habit.py  planner.py  replan.py  task.py  workspace.py
backend/app/services/: __init__.py  adaptive_planning_service.py  goal_service.py  habit_service.py  planner_service.py  recurrence.py  (+3 more)
backend/tests/: conftest.py  test_execution.py  test_goals.py  test_habits.py  test_health.py  test_memory.py  test_planner.py  test_preference_suggestion.py  test_replan.py
(+129 files in other folders)
