[project]
name = "lifeos-backend"
version = "0.1.0"
description = "LifeOS backend - FastAPI service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.1",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "black>=24.10.0",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's Depends(...) as a default argument is the framework's
# documented, idiomatic pattern (not the mutable-default-arg footgun this
# rule normally guards against) - safe to ignore repo-wide.
ignore = ["B008"]
